docs: Refine intro text for clarity and punch

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <a href="#intro" class="nav-link py-3 px-4 border-bottom border-light-subtle">1. Intro</a>
         <a href="#referenz" class="nav-link py-3 px-4 border-bottom border-light-subtle">2. Hexadezimalsystem</a>
         <a href="#hex-bin" class="nav-link py-3 px-4 border-bottom border-light-subtle">3. Hex ↔ Binär</a>
-        <a href="#konvertierung" class="nav-link py-3 px-4 border-bottom border-light-subtle">4. Dezimal ↔ Hex</a>
+        <a href="#konvertierung" class="nav-link py-3 px-4 border-bottom border-light-subtle">4. Hex ↔ Dezimal</a>
         <a href="#praxis" class="nav-link py-3 px-4 border-bottom border-light-subtle">5. Praxis</a>
         <a href="#wissenscheck" class="nav-link py-3 px-4">6. Wissenscheck</a>
       </nav>
@@ -513,9 +513,9 @@
         </h1>
         <p class="lead text-muted mb-5">
           Daten kompakt darstellen. Computer arbeiten rein binär (<span class="mono">11110000...</span>), aber das ist
-          für Menschen kaum lesbar. Hexadezimal ist der
-          <strong>Standard-Werkzeugkasten für IT-Profis</strong> – in
-          Netzwerken, Speicher und Farbdefinitionen.
+          Daten kompakt darstellen. Computer arbeiten rein binär (<span class="mono">11110000...</span>), aber das ist
+          für Menschen kaum lesbar. <br />
+          <strong>Hex ist die Sprache der IT-Profis</strong>: Egal ob Netzwerk, Speicher oder Farben.
         </p>
 
         <div class="row g-4">
@@ -745,7 +745,7 @@
       <section id="konvertierung" class="p-4 p-lg-5">
         <div class="level-badge">Kapitel 4</div>
         <div class="level-card">
-          <h2 class="h3 mb-5">Dezimal ↔ Hex</h2>
+          <h2 class="h3 mb-5">Hex ↔ Dezimal</h2>
 
           <!-- Decoder -->
           <h3 class="h5 text-accent mb-3">Decoder (Hex → Dez)</h3>
